--- a/assets/style.css
+++ b/assets/style.css
@@ -22,12 +22,15 @@
 .cust-container{
   width: 60%;
   margin: 0 auto;
-  height: 400px;
 }
 
 /*GENERAL*/
 
-body {
+section{
+  padding: 70px 0px 50px 0px;
+}
+
+body{
   font-family: 'Helvetica Neue', sans-serif;
 }
 
@@ -77,6 +80,7 @@ body {
  }
 
  .plus-green{
+  color: white;
   top: 0;
   width: 100%;
   height: 100%;
@@ -89,16 +93,14 @@ body {
 
  .pc-card:hover .plus-green{
   display: flex !important;
-  
  }
+ 
 
  /*ABOUT*/
 
  .bg-about{
   background-color: var(--bg-green);
  }
-
- 
 
  /*contact*/
 
@@ -139,14 +141,14 @@ body {
 }
 
 .top-footer .ghost a{
+  display: inline-block;
   font-size: 1.1rem;
   color: white;
   text-decoration: none;
-  height: 55px;
-  width: 55px;
+  aspect-ratio: 1;
   border-radius: 50%;
-  padding: 5px;
   border: 1px solid white;
+  width: 50px;
 }
 .top-footer .whitch a{
   color: var(--bg-green);
